[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"": "src"}
packages = "find:"

[project]
name = "vertice"
version = "0.7.4"
authors = [{name="Jordy Veenstra / A Pixelated Point of View" <jordy.gaptx@gmail.com>"}]
description = "Quake III Map Boundary Analysis Tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "reportlab",
  "py7zr",
  "rarfile",
  "matplotlib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
vertice_run = "vertice.vertice:exec_alg"

[project.urls]
GitHub = "https://github.com/jiyorude/vertice"